Patch game while transfer (DVD->WBFS, DVD->image, DVD->extract)

--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -253,6 +253,16 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="dvdTab_pushButton_Patch">
+             <property name="text">
+              <string>Patch</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
