--- a/resources/ui/wiibafudialog.ui
+++ b/resources/ui/wiibafudialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowIcon">
-   <iconset resource="../wiibafu.qrc">
+   <iconset>
     <normaloff>:/appicon/images/appicon.png</normaloff>:/appicon/images/appicon.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -65,6 +65,10 @@
             <property name="text">
              <string>Open</string>
             </property>
+            <property name="icon">
+             <iconset resource="../wiibafu.qrc">
+              <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
+            </property>
            </widget>
           </item>
           <item row="1" column="0">
@@ -90,7 +94,11 @@
              <locale language="English" country="UnitedStates"/>
             </property>
             <property name="text">
-             <string>Open file</string>
+             <string>Open</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../wiibafu.qrc">
+              <normaloff>:/images/openfile.png</normaloff>:/images/openfile.png</iconset>
             </property>
            </widget>
           </item>
@@ -193,6 +201,10 @@ Default value is 4G</string>
            <widget class="QPushButton" name="pushButton_Split">
             <property name="text">
              <string>Split</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../wiibafu.qrc">
+              <normaloff>:/images/split.png</normaloff>:/images/split.png</iconset>
             </property>
             <property name="checkable">
              <bool>true</bool>
@@ -659,6 +671,10 @@ Default value is 4G</string>
        <property name="text">
         <string>Patch</string>
        </property>
+       <property name="icon">
+        <iconset resource="../wiibafu.qrc">
+         <normaloff>:/images/patch.png</normaloff>:/images/patch.png</iconset>
+       </property>
        <property name="checkable">
         <bool>true</bool>
        </property>
@@ -666,6 +682,9 @@ Default value is 4G</string>
      </item>
      <item>
       <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="styleSheet">
+        <string notr="true">dialogbuttonbox-buttons-have-icons: 1;</string>
+       </property>
        <property name="locale">
         <locale language="English" country="UnitedStates"/>
        </property>
