French and norwegian translations added, wit to v2.00b r2855 updated

--- a/resources/locale.qrc
+++ b/resources/locale.qrc
@@ -1,10 +1,15 @@
 <RCC>
     <qresource prefix="/">
-        <file>locale/german.qm</file>
         <file>locale/dutch.qm</file>
-        <file>locale/spanish.qm</file>
+        <file>locale/english.qm</file>
+        <file>locale/french.qm</file>
+        <file>locale/german.qm</file>
         <file>locale/italian.qm</file>
+        <file>locale/norwegian.qm</file>
+        <file>locale/spanish.qm</file>
         <file>locale/qt_de.qm</file>
         <file>locale/qt_es.qm</file>
+        <file>locale/qt_fr.qm</file>
+        <file>locale/qt_uk.qm</file>
     </qresource>
 </RCC>
