--- a/resources/ui/settings.ui
+++ b/resources/ui/settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>500</height>
+    <height>506</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -593,6 +593,12 @@
              <iconset resource="../wiibafu.qrc">
               <normaloff>:/images/openfile.png</normaloff>:/images/openfile.png</iconset>
             </property>
+            <property name="iconSize">
+             <size>
+              <width>16</width>
+              <height>16</height>
+             </size>
+            </property>
            </widget>
           </item>
           <item row="0" column="2">
@@ -639,6 +645,12 @@
                <iconset resource="../wiibafu.qrc">
                 <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
               </property>
+              <property name="iconSize">
+               <size>
+                <width>16</width>
+                <height>16</height>
+               </size>
+              </property>
              </widget>
             </item>
             <item row="1" column="0">
@@ -659,6 +671,12 @@
               <property name="icon">
                <iconset resource="../wiibafu.qrc">
                 <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>16</width>
+                <height>16</height>
+               </size>
               </property>
              </widget>
             </item>
@@ -712,6 +730,12 @@
                <iconset resource="../wiibafu.qrc">
                 <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
               </property>
+              <property name="iconSize">
+               <size>
+                <width>16</width>
+                <height>16</height>
+               </size>
+              </property>
              </widget>
             </item>
             <item>
@@ -722,6 +746,12 @@
               <property name="icon">
                <iconset resource="../wiibafu.qrc">
                 <normaloff>:/images/openfile.png</normaloff>:/images/openfile.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>16</width>
+                <height>16</height>
+               </size>
               </property>
              </widget>
             </item>
@@ -767,6 +797,12 @@
               <property name="icon">
                <iconset resource="../wiibafu.qrc">
                 <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>16</width>
+                <height>16</height>
+               </size>
               </property>
              </widget>
             </item>
